achored the youtube logo and google profile in header and fixed youtube logo alignment due to anchor

--- a/styles/chips.css
+++ b/styles/chips.css
@@ -1,4 +1,4 @@
-.all-chip-container {
+.chips-wrapper {
   height: 56px;
   display: flex;
   flex-direction: row;
