--- a/styles/header.css
+++ b/styles/header.css
@@ -33,6 +33,14 @@
   padding-left: 16px;
   cursor: pointer;
 }
+.youtube-logo-anchor {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
+  color: #000000;
+}
 
 .middle-section {
   display: flex;
@@ -109,15 +117,7 @@
   position: relative;
   cursor: pointer;
 }
-.search-button:hover,
-.plus-create:hover {
-  background-color: rgba(0, 0, 0, 0.1);
-}
-.voice-search-button:hover,
-.notification-button:hover {
-  border-radius: 100px;
-  background-color: rgba(0, 0, 0, 0.1);
-}
+
 .search-button .tooltip,
 .voice-search-button .tooltip,
 .notification-button .tooltip {
@@ -132,13 +132,22 @@
   transition: opacity 0.15s;
   pointer-events: none;
   white-space: nowrap;
+  /* z-index: 250; */
 }
 .search-button:hover .tooltip,
 .voice-search-button:hover .tooltip,
 .notification-button:hover .tooltip {
   opacity: 1;
 }
-
+.search-button:hover,
+.plus-create:hover {
+  background-color: rgba(0, 0, 0, 0.1);
+}
+.voice-search-button:hover,
+.notification-button:hover {
+  border-radius: 100px;
+  background-color: rgba(0, 0, 0, 0.1);
+}
 .right-section {
   display: flex;
   flex-direction: row;
